# push_swap

./: .gitignore  CMakeLists.txt  Makefile
include/: deque.h
libft/: .gitignore  CMakeLists.txt  Makefile  ft_atoi.c  ft_atol.c  ft_atoll.c  ft_calloc.c  ft_isalnum.c  ft_itoa.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strnstr.c  ft_strtrim.c  ft_substr.c  libft.h
libft/ft_printf/: ft_printf.c  ft_putnbr_base.c  parse_placeholder.c  print.c
libft/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/include/: ft_stdio.h  ft_string.h
libft/stdio/ft_printf/: ft_printf.c  ft_putnbr_base.c  internal.h  print.c
libft/stdlib/: ft_atoi.c  ft_atol.c  ft_atoll.c
libft/string/: ft_strjoin.c
src/: deque.c  main.c  parse_args.c  parse_args.h
src/algorithm/: algorithm.h  helper.c  helper.h  local_optimized_sort.c  optimize.c  optimize.h  optimize_replace.c  quick_select.c  sort.c  sort_stacks.c
src/args/: parse_args.c  parse_args.h
src/deque/: deque.c  deque.h  deque_operation.c
src/error/: error.c  error.h
src/stacks/: add_instruction.c  push.c  rotate.c  rotate_reverse.c  stacks.c  stacks.h  swap.c
src/two_stack/: push.c  rotate.c  rotate_reverse.c  swap.c  two_stack.h
src/util/: memory.c  string.c  util.c  util.h
test/: CMakeLists.txt  args_test.cpp  deque_test.cpp  quick_select_test.cpp
